--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,17 @@
+/*======================================================================*/
+/* GENERAL STYLING */
+/*======================================================================*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    z-index: 0;
     /* border: 1px solid red; */
 }
 
 body, html{
     height: 100vh;
-    width: 100% !important;
+    width: 100%;
     font-family: monospace;
     /* font-family: 'Ubuntu', sans-serif; */
     /* font-family: 'Indie Flower', cursive; */
@@ -18,14 +22,9 @@ body, html{
     overflow: auto;
 }
 
-/* For project buttons. They are overlapping navbar for some reason */
-div div div a {
-    z-index: 0 !important;
-}
-
-/*////////////////////////////////////////////////////////////////////////
+/*======================================================================*/
 /* HEADER */
-/*///////////////////////////////////////////////////////////////////////*/
+/*======================================================================*/
 nav {
     position: fixed;
     background: rgba(255, 255, 255, 0.8) !important;
@@ -54,9 +53,9 @@ nav div a {
     font-size: 24px;
 }
 
-/*////////////////////////////////////////////////////////////////////////
+/*======================================================================*/
 /* LANDING PAGE */
-/*///////////////////////////////////////////////////////////////////////*/
+/*======================================================================*/
 .gorge {
     background-image: url("../images/emory.jpg");
     background-attachment: fixed;
@@ -75,7 +74,12 @@ nav div a {
     text-align: center;
     color: rgb(231, 245, 249);
     width: 75%;
-    margin-top: 200px;
+    /* margin-top: 200px; */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* opacity: 1; */
 }
 
 #hello-content {
@@ -92,9 +96,9 @@ nav div a {
 
 
 
-/*////////////////////////////////////////////////////////////////////////
+/*======================================================================*/
 /* SCROLLING CSS */
-/*///////////////////////////////////////////////////////////////////////*/
+/*======================================================================*/
 .scrolled {
     background: rgb(0, 0, 0) !important;
     /* border-style: solid;
@@ -105,9 +109,9 @@ nav div a {
     color: white !important;
 }
 
-/*////////////////////////////////////////////////////////////////////////
+/*======================================================================*/
 /* ABOUT */
-/*///////////////////////////////////////////////////////////////////////*/
+/*======================================================================*/
 .trees {
     background-image: url("../images/trees.jpg");
     background-attachment: fixed;
@@ -178,9 +182,9 @@ nav div a {
 }
 
 
-/*////////////////////////////////////////////////////////////////////////
+/*======================================================================*/
 /* PROJECTS */
-/*///////////////////////////////////////////////////////////////////////*/
+/*======================================================================*/
 .bottombg {
     background-image: url("../images/dark.png");
     /* height: 150%; */
@@ -233,9 +237,9 @@ div.card-reveal span.card-title{
     background-color: rgba(0,0,0,0.7) !important;
 }
 
-/*////////////////////////////////////////////////////////////////////////
+/*======================================================================*/
 /* CONTACT */
-/*///////////////////////////////////////////////////////////////////////*/
+/*======================================================================*/
 .footer {
     width: 100%;
     /* height: 39%; */
