--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ nav {
     position: fixed;
     background: rgba(255, 255, 255, 0.8) !important;
     padding: 0 20px;
-    /* z-index: 3; */
+    z-index: 100;
     /* box-shadow: none; */
 }
 
@@ -61,7 +61,7 @@ nav div a {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -70,18 +70,13 @@ nav div a {
 
 #hello-container {
     display: flex;
-    justify-content: center;
     align-items: center; 
     text-align: center;
     color: rgb(231, 245, 249);
-    width: 75%;
-    /* margin-top: 200px; */
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* opacity: 1; */
-    /* z-index: 1; */
 }
 
 #hello-content {
@@ -189,14 +184,14 @@ nav div a {
 /*======================================================================*/
 .bottombg {
     background-image: url("../images/dark.png");
-    /* height: 150%; */
+    min-height: 150%;
     width: 100%;
-    /* position: relative; */
+    position: relative;
 
 }
 
 .project-section {
-    /* height: 61%; */
+    min-height: 100%;
     width: 100%;
 }
 
@@ -244,15 +239,15 @@ div.card-reveal span.card-title{
 /*======================================================================*/
 .footer {
     width: 100%;
-    /* height: 39%; */
+    min-height: 40%;
     padding-top: 160px;
     background-color: rgb(99, 194, 222, .5) !important;
     border-top-style: solid;
     border-width: 10px 0 0 0;
     border-color: rgb(99, 194, 222);
     border-radius: 50% 50% 0 0;
-    /* position: absolute;
-    bottom: 0; */
+    position: absolute;
+    bottom: 0;
     
 }
 
@@ -277,6 +272,9 @@ div.card-reveal span.card-title{
     padding-right: 10px;
 } */
 
+/*======================================================================*/
+/* MEDIA QUERIES */
+/*======================================================================*/
 /* Resizes Landing Background */
 @media screen and (max-width: 1280px) {
     .gorge {
@@ -321,4 +319,35 @@ div.card-reveal span.card-title{
     #resume-button {
         padding-top: 0;
     }
+
+    .filters-button-group {
+        text-align: center;
+        padding: 10px;
+        display: block !important;
+    }
+
+    .header {
+        font-size: 20pt;
+    }
+}
+
+/* Format Footer */
+@media screen and (max-width: 992px) {
+    .bottombg {
+        min-height: 160%;
+    }
+    .footer {
+        min-height: 30%;
+    }
+    
+}
+
+@media screen and (max-width: 600px) {
+    .bottombg {
+        min-height: 260%;
+    }
+    .footer {
+        min-height: 10%;
+    }
+    
 }
