--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body, html{
 }
 
 /*======================================================================*/
-/* HEADER */
+/* NAV */
 /*======================================================================*/
 nav {
     position: fixed;
@@ -121,6 +121,7 @@ nav div a {
     border-style: solid;
     border-width: 10px 0 10px 0;
     border-color: rgb(99, 194, 222);
+    position: relative;
 }
 
 #about-me-container {
