--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,6 @@ body, html{
     color: black;
 }
 
-.clearfix {
-    overflow: auto;
-}
-
 /*======================================================================*/
 /* NAV */
 /*======================================================================*/
@@ -57,7 +53,7 @@ nav div a {
 /* LANDING PAGE */
 /*======================================================================*/
 .gorge {
-    background-image: url("../images/emory.jpg");
+    background-image: url("../images/night.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -80,15 +76,21 @@ nav div a {
 }
 
 #hello-content {
-    background: rgb(99, 194, 222, .5);
-    border-radius: 50%;
+    /* background: rgb(99, 194, 222, .5); */
+    /* border-radius: 50%; */
     padding: 40px;
-    border-style: solid;
+    /* border-style: solid;
     border-width: 5px;
-    border-color: rgb(231, 245, 249);
+    border-color: rgb(231, 245, 249); */
 }
 
+.big-text {
+    font-size: 80px;
+}
 
+.small-text {
+    font-size: 20px;
+}
 
 
 
@@ -291,13 +293,12 @@ div.card-reveal span.card-title{
 /* MEDIA QUERIES */
 /*======================================================================*/
 /* Resizes Landing Background */
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1432px) {
     .gorge {
-        background-image: url("../images/emory.jpg");
+        background-image: url("../images/night.jpg");
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100%; 
         margin: 0px;
         padding: 0px;
         max-width: 100%;
@@ -314,7 +315,6 @@ div.card-reveal span.card-title{
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
-        /* height: 93.5%; */
         width: 100%;
         display: flex;
         justify-content: center;
