--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ nav div a {
 
 /* Vertical Center */
 #about-me-container {
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     align-items: center; 
 }
@@ -138,14 +138,25 @@ nav div a {
     border-style: solid;
     border-width: 10px 0;
     border-color: rgb(99, 194, 222);
-    border-radius: 15%;
+    /* border-radius: 15%; */
     /* position: absolute; */
-   
+   overflow: auto;
+   border-radius: 5px;
 
     /* margin: auto; */
 }
 
-.about-icons {
+#about-pic {
+    border: 5px solid rgb(31, 31, 31, .5);
+    border-radius: 50px;
+    /* min-height: 80%; */
+}
+
+#about-text {
+    font-size: 24px;
+}
+
+/* .about-icons {
     background: rgba(255, 255, 255);
     height: 170px;
     width: 170px;
@@ -156,7 +167,7 @@ nav div a {
     border-width: 10px 0;
     border-color: rgb(99, 194, 222);
     border-radius: 15%;
-}
+} */
 
 .about-icons:hover {
     -webkit-transform: scale(1.3);
@@ -222,6 +233,8 @@ nav div a {
     border-style: solid;
     border-width: 5px;
     border-color: rgb(99, 194, 222);
+    border-radius: 50px;
+    overflow: hidden;
 }
 
 /* HOVER */
@@ -408,7 +421,7 @@ div.card-reveal span.card-title{
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: rgb(231, 245, 249, .8); 
+    background: rgb(248, 179, 2); 
 }
 
 /* Handle on hover */
