--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,6 @@
 body, html{
     height: 100vh;
     width: 100%;
-    position: relative;
     font-family: monospace;
     color: black;
 }
@@ -51,7 +50,6 @@ nav {
     background: rgba(255, 255, 255, 0.8) !important;
     padding: 0 20px;
     z-index: 100;
-    /* box-shadow: none; */
 }
 
 /* Text Color */
@@ -80,13 +78,13 @@ nav div a {
     background-size: cover;
     min-height: 100%; 
     width: 100%;
-    display: flex;
-    /* justify-content: center; */
     background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 #hello-container {
-    /* display: flex; */
     align-items: center; 
     text-align: center;
     color: rgb(231, 245, 249);
@@ -102,9 +100,6 @@ nav div a {
 /*======================================================================*/
 .scrolled {
     background: rgb(34, 34, 34) !important;
-    /* border-style: solid;
-    border-width: 0 0 2px 0;
-    border-color: rgb(99, 194, 222); */
 }
 .scrolled-font {
     color: white !important;
@@ -118,22 +113,16 @@ nav div a {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    /* height: 93.5%; */
     width: 100%;
     display: flex;
-    /* justify-content: center; */
     background-position: center;
     border-style: solid;
     border-width: 10px 0 10px 0;
     border-color: rgb(99, 194, 222);
-    /* position: relative; */
-}
-
-/* Vertical Center */
-#about-me-container {
-    /* display: flex; */
-    justify-content: center;
-    align-items: center; 
+    position: relative;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 #about-me {
@@ -143,41 +132,25 @@ nav div a {
     border-style: solid;
     border-width: 10px 0;
     border-color: rgb(99, 194, 222);
-    /* border-radius: 15%; */
-    /* position: absolute; */
-   overflow: auto;
-   border-radius: 5px;
+    overflow: auto;
+    border-radius: 5px;
 
-    /* margin: auto; */
+    /* Vertical Center */
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 #about-pic {
-    border: 5px solid rgb(31, 31, 31, .5);
+    border: 5px solid rgb(31, 31, 31);
     border-radius: 50px;
-    /* min-height: 80%; */
 }
 
 #about-text {
     font-size: 24px;
-}
-
-/* .about-icons {
-    background: rgba(255, 255, 255);
-    height: 170px;
-    width: 170px;
-    padding-top: 10px;
-    margin: 0 auto;
-    color: #1F1F1F;
-    border-style: solid;
-    border-width: 10px 0;
-    border-color: rgb(99, 194, 222);
-    border-radius: 15%;
-} */
-
-.about-icons:hover {
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
 }
 
 #slashes {
@@ -193,16 +166,11 @@ nav div a {
 /*======================================================================*/
 .bottombg {
     background-image: url("../images/dark.png");
-    /* min-height: 150%; */
     width: 100%;
-    /* position: relative; */
-
 }
 
 .project-section {
-    /* min-height: 100%; */
     width: 100%;
-    /* float: left; */
 }
 
 #projects {
@@ -214,7 +182,7 @@ nav div a {
     color: rgb(99, 194, 222);
 }
 
-/* Hover Filter */
+/* Isotope Filter Text Color */
 .button:hover {
     color: rgb(99, 194, 222); 
 }
@@ -225,13 +193,7 @@ nav div a {
 #projects div h2 {
     margin: 0;
     padding-top: 40px;
-
 }
-
-/* .card-body {
-    background: #E7F5F9 !important;
-    color: black;
-} */
 
 .card {
     border-style: solid;
@@ -249,7 +211,6 @@ nav div a {
 div.card-reveal span.card-title{
   color: #ffffff !important;
 }
-
 .hover {
     background-color: rgba(0,0,0,0.7) !important;
 }
@@ -259,38 +220,24 @@ div.card-reveal span.card-title{
 }
 
 /* Isotope */
-/* .grid {
-    margin: 0 !important;
-    padding: 0 !important;
-} */
 .element-item {
     width: 33.33% !important;
 }
-/* .grid-sizer,
-.element-item { width: 33.33%; } */
 
 /*======================================================================*/
 /* CONTACT */
 /*======================================================================*/
 .page-footer {
     width: 100%;
-    /* min-height: 40%; */
-    /* padding-top: 160px; */
     background-color: rgb(99, 194, 222, .5) !important;
     border-top-style: solid;
     border-width: 10px 0 0 0;
     border-color: rgb(99, 194, 222);
     border-radius: 50% 50% 0 0;
-    /* position: absolute;
-    bottom: 0; */
-    /* clear: left; */
+    text-align: center;
 }
 
 .copyright {
-    
-    color: white;
-    text-align: center;
-    
     margin: 0 auto;
 }
 
@@ -301,10 +248,6 @@ div.card-reveal span.card-title{
 a {
     color: rgb(248, 179, 2); 
 }
-
-/* .icon-space {
-    padding-right: 10px;
-} */
 
 /*======================================================================*/
 /* MEDIA QUERIES */
