--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,19 @@
 /*======================================================================*/
+/* PRELOADER */
+/*======================================================================*/
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url("../preloader/Preloader_2.gif") center no-repeat #fff;
+}
+
+/*======================================================================*/
 /* GENERAL STYLING */
 /*======================================================================*/
 * {
