--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*======================================================================*/
 /* PRELOADER */
 /*======================================================================*/
-.no-js #loader { display: none;  }
+/* .no-js #loader { display: none;  }
 .js #loader { display: block; position: absolute; left: 100px; top: 0; }
 .se-pre-con {
 	position: fixed;
@@ -11,7 +11,7 @@
 	height: 100%;
 	z-index: 9999;
 	background: url("../preloader/Preloader_2.gif") center no-repeat #fff;
-}
+} */
 
 /*======================================================================*/
 /* GENERAL STYLING */
